--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fims-2.0-react",
+  "name": "money-buddy1.0",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -40,22 +40,27 @@
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
     "@vitejs/plugin-react": "^4.0.0",
+    "axios": "^1.6.0",
+    "express": "^4.18.2",
     "formik": "2.2.9",
     "i18next": "22.4.15",
     "i18next-browser-languagedetector": "7.0.1",
     "luxon": "3.3.0",
+    "mysql": "github:mysqljs/mysql",
     "oidc-client-ts": "2.2.2",
     "react": "0.0.0-experimental-c8369527e-20230420",
     "react-bootstrap": "1.6.1",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "0.0.0-experimental-c8369527e-20230420",
     "react-i18next": "12.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-redux": "8.0.5",
     "react-router-dom": "6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "9.1.2",
     "redux": "4.2.1",
     "redux-logger": "3.0.6",
-    "styled-components": "5.3.10",
+    "styled-components": "^5.3.10",
     "summernote": "./summernote",
     "uuid": "9.0.0",
     "vite": "^4.3.1",
@@ -99,5 +104,9 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  }
+  },
+  "description": "<p align=\"center\" style=\"margin-bottom: 32px\">   <a href=\"https://erdkse.com\" >     <img src=\"https://raw.githubusercontent.com/erdkse/adminlte-3-react/main/public/img/logo.png\" alt=\"AdminLTE logo\" width=\"75\" height=\"75\">   </a> </p>",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
